[project]
name = "agent-farm"
version = "3.1.0"
description = "AI organism evolution and parallel task execution - Speed optimized tool-enabled agents"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp==2.14.2",
    "httpx>=0.27.0",
    "psutil>=5.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
agent-farm = "agent_farm.server:main"
